dslexp/parsers/grammars/constrainify/ConstrainifyParser.py
# Generated from Constrainify.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ConstrainifyParser ( Parser ):

    grammarFileName = "Constrainify.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@'", "'{'", "'}'", "':'", "';'", "'String'", 
                     "'Int'", "'Float'", "'Boolean'", "'Date'", "'if'", 
                     "'then'", "'cannot be'", "'must be'", "'must be in'", 
                     "'equals'", "'>'", "'<'", "'>='", "'<='", "'='", "'some'", 
                     "'every'", "'none'", "'['", "','", "']'", "'+'", "'-'", 
                     "'*'", "'/'", "'when'", "'('", "')'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "IDENTIFIER", "NUMBER", "QUOTED_STRING", 
                      "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_contextStm = 2
    RULE_propertyDefinition = 3
    RULE_propertyType = 4
    RULE_constraint = 5
    RULE_propertyCall = 6
    RULE_invariantStm = 7
    RULE_comparator = 8
    RULE_value = 9
    RULE_operation = 10
    RULE_operator = 11
    RULE_condition = 12
    RULE_function = 13
    RULE_boolean = 14

    ruleNames =  [ "program", "statement", "contextStm", "propertyDefinition", 
                   "propertyType", "constraint", "propertyCall", "invariantStm", 
                   "comparator", "value", "operation", "operator", "condition", 
                   "function", "boolean" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    IDENTIFIER=37
    NUMBER=38
    QUOTED_STRING=39
    WS=40
    COMMENT=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ConstrainifyParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstrainifyParser.StatementContext)
            else:
                return self.getTypedRuleContext(ConstrainifyParser.StatementContext,i)


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ConstrainifyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.statement()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 35
            self.match(ConstrainifyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def contextStm(self):
            return self.getTypedRuleContext(ConstrainifyParser.ContextStmContext,0)


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ConstrainifyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.contextStm()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContextStmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ConstrainifyParser.IDENTIFIER, 0)

        def propertyDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstrainifyParser.PropertyDefinitionContext)
            else:
                return self.getTypedRuleContext(ConstrainifyParser.PropertyDefinitionContext,i)


        def constraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstrainifyParser.ConstraintContext)
            else:
                return self.getTypedRuleContext(ConstrainifyParser.ConstraintContext,i)


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_contextStm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContextStm" ):
                return visitor.visitContextStm(self)
            else:
                return visitor.visitChildren(self)




    def contextStm(self):

        localctx = ConstrainifyParser.ContextStmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_contextStm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(ConstrainifyParser.T__0)
            self.state = 40
            self.match(ConstrainifyParser.IDENTIFIER)
            self.state = 41
            self.match(ConstrainifyParser.T__1)
            self.state = 44 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 42
                    self.propertyDefinition()
                    pass

                elif la_ == 2:
                    self.state = 43
                    self.constraint()
                    pass


                self.state = 46 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4 or _la==37):
                    break

            self.state = 48
            self.match(ConstrainifyParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ConstrainifyParser.IDENTIFIER, 0)

        def propertyType(self):
            return self.getTypedRuleContext(ConstrainifyParser.PropertyTypeContext,0)


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_propertyDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyDefinition" ):
                return visitor.visitPropertyDefinition(self)
            else:
                return visitor.visitChildren(self)




    def propertyDefinition(self):

        localctx = ConstrainifyParser.PropertyDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_propertyDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(ConstrainifyParser.IDENTIFIER)
            self.state = 51
            self.match(ConstrainifyParser.T__3)
            self.state = 52
            self.propertyType()
            self.state = 53
            self.match(ConstrainifyParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ConstrainifyParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ConstrainifyParser.RULE_propertyType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyType" ):
                return visitor.visitPropertyType(self)
            else:
                return visitor.visitChildren(self)




    def propertyType(self):

        localctx = ConstrainifyParser.PropertyTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_propertyType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.state = 55
                self.match(ConstrainifyParser.T__5)
                pass
            elif token in [7]:
                self.state = 56
                self.match(ConstrainifyParser.T__6)
                pass
            elif token in [8]:
                self.state = 57
                self.match(ConstrainifyParser.T__7)
                pass
            elif token in [9]:
                self.state = 58
                self.match(ConstrainifyParser.T__8)
                pass
            elif token in [10]:
                self.state = 59
                self.match(ConstrainifyParser.T__9)
                pass
            elif token in [1]:
                self.state = 60
                self.match(ConstrainifyParser.T__0)
                self.state = 61
                self.match(ConstrainifyParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def propertyCall(self):
            return self.getTypedRuleContext(ConstrainifyParser.PropertyCallContext,0)


        def invariantStm(self):
            return self.getTypedRuleContext(ConstrainifyParser.InvariantStmContext,0)


        def operation(self):
            return self.getTypedRuleContext(ConstrainifyParser.OperationContext,0)


        def comparator(self):
            return self.getTypedRuleContext(ConstrainifyParser.ComparatorContext,0)


        def condition(self):
            return self.getTypedRuleContext(ConstrainifyParser.ConditionContext,0)


        def constraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstrainifyParser.ConstraintContext)
            else:
                return self.getTypedRuleContext(ConstrainifyParser.ConstraintContext,i)


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_constraint

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraint" ):
                return visitor.visitConstraint(self)
            else:
                return visitor.visitChildren(self)




    def constraint(self):

        localctx = ConstrainifyParser.ConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constraint)
        self._la = 0 # Token type
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.propertyCall()
                self.state = 65
                self.invariantStm()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4128768) != 0):
                    self.state = 66
                    self.comparator()


                self.state = 69
                self.operation()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==32:
                    self.state = 70
                    self.condition()


                self.state = 73
                self.match(ConstrainifyParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.propertyCall()
                self.state = 76
                self.match(ConstrainifyParser.T__10)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4128768) != 0):
                    self.state = 77
                    self.comparator()


                self.state = 80
                self.operation()
                self.state = 81
                self.match(ConstrainifyParser.T__11)
                self.state = 82
                self.match(ConstrainifyParser.T__1)
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 83
                    self.constraint()
                    self.state = 86 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==4 or _la==37):
                        break

                self.state = 88
                self.match(ConstrainifyParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ConstrainifyParser.IDENTIFIER)
            else:
                return self.getToken(ConstrainifyParser.IDENTIFIER, i)

        def function(self):
            return self.getTypedRuleContext(ConstrainifyParser.FunctionContext,0)


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_propertyCall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyCall" ):
                return visitor.visitPropertyCall(self)
            else:
                return visitor.visitChildren(self)




    def propertyCall(self):

        localctx = ConstrainifyParser.PropertyCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_propertyCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 92
                self.match(ConstrainifyParser.T__3)
                self.state = 93
                self.match(ConstrainifyParser.IDENTIFIER)

            elif la_ == 2:
                self.state = 94
                self.function()


            self.state = 97
            self.match(ConstrainifyParser.T__3)
            self.state = 98
            self.match(ConstrainifyParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvariantStmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_invariantStm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvariantStm" ):
                return visitor.visitInvariantStm(self)
            else:
                return visitor.visitChildren(self)




    def invariantStm(self):

        localctx = ConstrainifyParser.InvariantStmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_invariantStm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_comparator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparator" ):
                return visitor.visitComparator(self)
            else:
                return visitor.visitChildren(self)




    def comparator(self):

        localctx = ConstrainifyParser.ComparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comparator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4128768) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTED_STRING(self):
            return self.getToken(ConstrainifyParser.QUOTED_STRING, 0)

        def NUMBER(self):
            return self.getToken(ConstrainifyParser.NUMBER, 0)

        def propertyCall(self):
            return self.getTypedRuleContext(ConstrainifyParser.PropertyCallContext,0)


        def boolean(self):
            return self.getTypedRuleContext(ConstrainifyParser.BooleanContext,0)


        def function(self):
            return self.getTypedRuleContext(ConstrainifyParser.FunctionContext,0)


        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstrainifyParser.ValueContext)
            else:
                return self.getTypedRuleContext(ConstrainifyParser.ValueContext,i)


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = ConstrainifyParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(ConstrainifyParser.QUOTED_STRING)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(ConstrainifyParser.NUMBER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.propertyCall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.boolean()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.function()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                self.match(ConstrainifyParser.T__21)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 110
                self.match(ConstrainifyParser.T__22)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 111
                self.match(ConstrainifyParser.T__23)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 112
                self.match(ConstrainifyParser.T__24)
                self.state = 113
                self.value()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==26:
                    self.state = 114
                    self.match(ConstrainifyParser.T__25)
                    self.state = 115
                    self.value()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 121
                self.match(ConstrainifyParser.T__26)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstrainifyParser.ValueContext)
            else:
                return self.getTypedRuleContext(ConstrainifyParser.ValueContext,i)


        def operator(self):
            return self.getTypedRuleContext(ConstrainifyParser.OperatorContext,0)


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_operation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)




    def operation(self):

        localctx = ConstrainifyParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_operation)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.value()
                self.state = 126
                self.operator()
                self.state = 127
                self.value()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_operator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = ConstrainifyParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4026531840) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def propertyCall(self):
            return self.getTypedRuleContext(ConstrainifyParser.PropertyCallContext,0)


        def value(self):
            return self.getTypedRuleContext(ConstrainifyParser.ValueContext,0)


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_condition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = ConstrainifyParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(ConstrainifyParser.T__31)
            self.state = 135
            self.propertyCall()
            self.state = 136
            self.match(ConstrainifyParser.T__20)
            self.state = 137
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ConstrainifyParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ConstrainifyParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = ConstrainifyParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(ConstrainifyParser.IDENTIFIER)
            self.state = 140
            self.match(ConstrainifyParser.T__32)
            self.state = 141
            self.match(ConstrainifyParser.T__33)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConstrainifyParser.RULE_boolean

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean" ):
                return visitor.visitBoolean(self)
            else:
                return visitor.visitChildren(self)




    def boolean(self):

        localctx = ConstrainifyParser.BooleanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_boolean)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not(_la==35 or _la==36):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





